# Initio

./: Vasp_analysis.ipynb  main.py  pyproject.toml
lib/: VASP_analysis_old.ipynb  __init__.py  initio.py
