[project]
name = "initio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ase>=3.28.0",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nglview>=4.0.1",
    "numpy>=2.4.4",
    "pymatgen>=2026.3.23",
    "scipy>=1.17.1",
]
